鉴权和修改学生信息